# PaperAnalyzer

./: README.md  pyproject.toml
PaperAnalyzerAgent/: agent.py  env_example  prompt.py
PaperAnalyzerAgent/subagents/bibliographic_agent/: agent.py  prompt.py
PaperAnalyzerAgent/subagents/connected_paper_agent/: agent.py  prompt.py
PaperAnalyzerAgent/subagents/innovation_agent/: agent.py  prompt.py
PaperAnalyzerAgent/subagents/overview_agent/: agent.py  prompt.py
tests/: test_agent.py
